--- a/arreglos.html
+++ b/arreglos.html
@@ -9,11 +9,24 @@
 	
 var amigo = ["Daniel","Cesar","Karla","Jose"];
 
+// aqui hacemos una union con el join document.write(amigo.join(": "))
+
+//var amigo2 = ["Vanesa","Yaki","Marcela","Yessi"];
+
+//var amigo3 = amigo.concat(amigo2);
+
+// otra forma de  document.write(amigo3); 
+
 //.length es para contar el total de los arreglos o la longitud
 //document.write("Tienes " + amigo.length + " amigos");
-amigo[amigo.length]="Jorge"; // aqui le indicamos al arreglo que va a agregar un nuevo amigo
-//otra forma de insertar datos al arreglo 
-amigo.push("Alejandra","Fernanda");
+ // aqui le indicamos al arreglo que va a agregar un nuevo amigo amigo[amigo.length]="Jorge";
+
+// para eliminar el ultimo elemento de un arreglo amigo.pop();
+
+
+
+//otra forma de insertar datos al arreglo amigo.push("Alejandra","Fernanda");
+
 //acceder al arreglo e imprimir document.write(amigo[0]);
 
 //modificar arreglo amigo[0] = "beto";
