--- a/Condicionales.html
+++ b/Condicionales.html
@@ -7,6 +7,20 @@
 
 <script type="text/javascript">
 	
+var edad = 15;
+
+document.write("Tu edad es " + edad + " y ");
+
+if (edad >= 18){
+
+  document.write("eres una persona mayor de edad");
+
+
+}else{
+
+document.write("eres menor de edad");
+
+}
 
 
   
