Fin de condicional if

--- a/Condicionales.html
+++ b/Condicionales.html
@@ -6,10 +6,10 @@
 <body>
 
 <script type="text/javascript">
-	
+	var nombre = "Yadira";
 var edad = 15;
 
-document.write("Tu edad es " + edad + " y ");
+document.write("Bienvenida " + nombre + " tu edad es " + edad + " y ");
 
 if (edad >= 18){
 
