--- a/Funciones.html
+++ b/Funciones.html
@@ -7,17 +7,17 @@
 
 <script type="text/javascript">
 	
-	function Suma (num1,num2){
+	var suma = function (num1,num2){
      
      var num1 = num1;
      var num2 = num2;
 
-     document.write("Tu resultado es: " + (num1 + num2));
+    return num1 + num2;
   
 
 	}
   
-  Suma(23,12);
+  document.write(suma (23,12) );
 
 </script>
 
