--- a/Funciones.html
+++ b/Funciones.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+
+<!--
 <script type="text/javascript">
 	
 	var suma = function (num1,num2){
@@ -17,9 +19,38 @@
 
 	}
   
-  document.write(suma (23,12) );
+  document.write(suma (23,12) + "<br>" );
+
+   document.write(suma (90,60) + "<br>" );
+
+</script>-->
+
+<script type="text/javascript">
+	
+	var numMax = function(valor1, valor2){
+
+       if (valor1 > valor2) {
+           
+           return valor1;
+
+       }else{
+          
+          return valor2;
+
+       }
+
+
+	document.write("El numero mayor es " + numMax(35,90));
+
+
+	}
+
 
 </script>
+
+<!-- Curso link
+https://www.youtube.com/watch?v=AvMFiQl7AU0&list=PLhSj3UTs2_yVC0iaCGf16glrrfXuiSd0G&index=9
+ -->
 
 
 </body>
