--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
 </head>
 <body>
 
-
-<script >
+<script type="text/javascript">
 	
-//aqui estamos creando un evento al dar click en la pantalla principal del html
-document.querySelector("HTML").onclick = function(){
-	alert("Sorry");
+	var miImage = document.querySelector('img');
+
+miImage.onclick = function () {
+    var miSrc = miImage.getAttribute('src');
+    if (miSrc === 'images/image_one.jpg') {
+      miImage.setAttribute('src','images/imege_two.jpg');
+    } else {
+      miImage.setAttribute('src', 'images/image_one.jpg');
+    }
 }
 
 </script>
+<!--<script src="Scripts/main.js"></script>-->
 </body>
 </html>
